=================
Changes for crash
=================

Unreleased
==========

Changes
=======

- Upgrade the CrateDB python driver to 0.26.0 in order to enable TCP keepalive
  on the socket level.
- Make ctrl-d only quit program on empty command line, like any other shell

2020/09/21 0.26.0
=================

- Fixed issue where cancelling a ctrl-r search would not return focus.

- Added feature to dynamically load keywords (for syntax highlighting) from
  ``pg_catalog.pg_get_keywords()``.

2020/03/04 0.25.0
=================

- Added the cluster name to the status bar.

- Sort the output of the ``\dt`` (show tables) command alphabetically.

- Improved the color scheme for the SQL syntax hightlighing.

- Dropped support for Python 3.4 and added official support for Python 3.7 and
  Python 3.8.

2018/10/04 0.24.2
=================

- Fixed an issue that caused a crash when connecting to a CrateDB enterprise
  edition with a user that don't have ``DQL`` privileges on ``sys.cluster``.

- Fixed an issue where line comments could only be used at the beginning of a
  line and not after a partial statement.

2018/06/15 0.24.1
=================

- Fixed a dependecy problem that caused ``crash`` not being able to connect to
  CrateDB if an older version of the dependency ``crate`` was already
  installed.

2018/05/12 0.24.0
=================

 - BREAKING: Dropped support for Python 2.7 and 3.3
   If you are using crash with Python 2.7 or 3.3 already, you will not be able
   to install newer versions of this package.

 - Added support for setting the default schema for statements. This is done by
   using the ``--schema`` argument on startup.

 - Updated the ``\dt`` command to show only tables, but not views. This is to
   be forward compatible with CrateDB 3.0 and greater.

2017/12/15 0.23.0
=================

 - Added support for password authentication.

 - Added support for pasting and executing multiple statements at once.
